--- a/module2-solution/css/styles.css
+++ b/module2-solution/css/styles.css
@@ -3,43 +3,38 @@
 * {
   box-sizing: border-box;
   padding: 0;
+  margin: 0;
 
 }
 h1 {
+  margin-top: 20px;
   margin-bottom: 15px;
   text-align: center;
 }
 
-p {
-   
+p {   
   font-family: Helvetica;
   color: black;
   background-color:#808080;
   border: 1px solid black;
-  margin: 15px;
-
-
+  margin: 10px;
+  padding: 20px;
 } 
 
 div
-{
-  
-  width: 90%;
-  height: 10%; 
-  margin-right: auto;
-  margin-left: auto;
- 
+{   
+  padding: 1px;  
 }
 
 #parText
 {
-  padding: 20px;
+  padding: 10px;
 }
 
 #titlesChicken
 {
   width: 100px;
-  height: 20px;
+  padding: 2px;
   border: 1px solid black;
   position: relative;
   text-align: center;
@@ -50,7 +45,7 @@ div
 #titlesBeef
 {
   width: 100px;
-  height: 20px;
+  padding: 2px;
   border: 1px solid black;
   position: relative;
   text-align: center;
@@ -61,7 +56,7 @@ div
 #titlesSushi
 {
   width: 100px;
-  height: 20px;
+  padding: 2px;
   border: 1px solid black;
   position: relative;
   text-align: center;
@@ -142,8 +137,7 @@ div
   }
   .col-md-6 {
     width: 50%;
-    position: relative;
-      
+    position: relative;      
   }
   .col-md-7 {
     width: 58.33%;
@@ -168,14 +162,16 @@ div
     float: left;
     position: relative;
   }
+}
 
- @media (min-width: 767px){
+
+/********** Small devices only **********/
+@media (min-width: 0px) and (max-width: 767px) {
 
     .lastPm {
       width:50%;
       background-color: #96FF33;
       position: relative;
+    }
   }
 
-  }
-}
